[package]
name = "lookup-table-registry-client"
version = "0.1.0"
edition = "2021"

[features]
client = [
    "anyhow",
    "async-trait",
    "endorphin",
    "solana-address-lookup-table-program-gateway/stub-instruction",
    "solana-address-lookup-table-program-gateway/stub-state",
    "solana-client",
    "tokio",
    "thiserror",
]
default = ["client"]

[dependencies]
anyhow = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
endorphin = { version = "0.1", optional = true }
thiserror = { version = "1", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

solana-client = { version = "1.14", optional = true }
solana-sdk = "1.14"
anchor-lang = "0.27.0"

[dependencies.solana-address-lookup-table-program-gateway]
path = "../solana-address-lookup-table-program-gateway"
features = ["stub-id"]

[dependencies.lookup-table-registry]
path = "../../programs/lookup-table-registry"
default-features = false
features = ["cpi"]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
