[package]
name = "solana-address-lookup-table-program-gateway"
version = "0.1.0"
edition = "2021"

[features]
full = [
    "solana-address-lookup-table-program",
    "stub-instruction",
    # TODO: remove "stub-instruction" when upgrading to solana 1.15 (needed for
    # signed ix which is only in 1.15 version of the program)
]
stub-id = ["solana-program"]
stub-instruction = ["stub-id", "serde"]
stub-state = ["stub-id", "serde", "bincode", "bytemuck"]
stub-all = ["stub-id", "stub-instruction", "stub-state"]
default = []

[dependencies]
# This version should be 1.15 because this crate actually requires code from
# that version, but setting that version here causes conflicts with the jet-v2
# repo. The required code has been copy and pasted into the `instruction` stub
# module to ensure compatibility, but ideally, everything would be upgraded to
# solana 1.15 instead.
solana-address-lookup-table-program = { version = "1.14", optional = true }

# for stubbing
solana-program = { version = "1.14", optional = true }
serde = { version = "1.0.138", features = ["derive"], optional = true }
bincode = { version = "1.3.3", optional = true }
bytemuck = { version = "1.12.3", optional = true }

[dev-dependencies]
solana-address-lookup-table-program = "1.14"
solana-program = "1.14"
serde = { version = "1.0.138", features = ["derive"] }
bincode = "1.3.3"
solana-frozen-abi-macro = "1.14"
bytemuck = "1.12.3"
