[package]
name = "lookup-table-registry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lookup_table_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
api = ["solana-address-lookup-table-program-gateway/stub-id"]
program = ["solana-address-lookup-table-program-gateway/full"]
cpi = ["no-entrypoint", "api"]
default = ["program"]

[dependencies]
anchor-lang = "0.27.0"
solana-program = "1.14"

[dependencies.solana-address-lookup-table-program-gateway]
path = "../../libraries/solana-address-lookup-table-program-gateway"
